added new functions - including logging

--- a/server/config.ini
+++ b/server/config.ini
@@ -1,1 +1,5 @@
 [clients]
+hp-omen.domain.abcdefghij123456.name = hp-omen.domain
+hp-omen.domain.abcdefghij123456.rete = 30
+hp-omen.domain.abcdefghij123456.pass = abcdefghij123456
+
