improved config_gui duplicate issue - also added inc backups to cli

--- a/client/config/config.ini
+++ b/client/config/config.ini
@@ -1,8 +1,10 @@
 [main]
 clientname = hp-omen.domain
-server = 192.168.1.10
+server = localhost
 port = 3820
 runhour = 17
 runmin = 00
 retention = 30
 password = abcdefghij123456
+lastrun = 1481566895.69
+
